# ckt

./: .gitignore  Cargo.toml  README.md  generate_test_circuit.sh
.github/: dependabot.yml
.github/workflows/: cron-zizmor.yml  docs.yml  lint.yml  security.yml  unit.yml  zizmor.yml
bench/: Cargo.toml
bench/src/: main.rs
checker/: Cargo.toml
checker/src/: main.rs
ckt-engine/: Cargo.toml
ckt-engine/benches/: garbling.rs
ckt-engine/src/: aarch64.rs  engine.rs  lib.rs  traits.rs
cli/: Cargo.toml
cli/src/: main.rs  stream.rs  writer.rs
cli/tests/: integration_tests.rs
crates/fmtv5-types/: Cargo.toml  Cargo.toml~
crates/fmtv5-types/src/: gate_type.rs  lib.rs
crates/fmtv5-types/src/v5/: SPEC.md  avx512.rs  mod.rs  scalar.rs
crates/fmtv5-types/src/v5/a/: integration.rs  mod.rs  reader.rs  writer.rs
crates/fmtv5-types/src/v5/b/: mod.rs  reader.rs  writer.rs
crates/fmtv5-types/src/v5/c/: SPEC.md  block.rs  chunk.rs  constants.rs  gate.rs  header.rs  integration.rs  mod.rs  reader.rs  stats.rs  writer.rs
crates/gobble/: Cargo.toml  Cargo.toml~  README.md
crates/gobble/benches/: garbling.rs  mitccrh.rs  translate.rs
crates/gobble/fuzz/: Cargo.toml
crates/gobble/fuzz/fuzz_targets/: aes.rs
crates/gobble/src/: eval.rs  exec.rs  garb.rs  input_translate.rs  lib.rs  output_translate.rs  traits.rs  translate.rs  types.rs
crates/gobble/src/aarch64/: eval.rs  exec.rs  expand.rs  garb.rs  mod.rs  translate.rs
crates/gobble/src/x86_64/: eval.rs  expand.rs  garb.rs  key_schedule.rs  mitccrh.rs  mod.rs  translate.rs
crates/lvl/: Cargo.toml
crates/lvl/src/: cli.rs  lib.rs  main.rs  prealloc.rs  state_map.rs  types.rs
crates/runner-exec/: Cargo.toml
crates/runner-exec/src/: eval.rs  exec.rs  garble.rs  hash_writer.rs  lib.rs  reader_impl.rs  worker.rs
crates/runner-types/: Cargo.toml  chunk.rs
crates/runner-types/src/: block.rs  lib.rs  traits.rs
dupecheck/: Cargo.toml
dupecheck/src/: main.rs
exectest/: Cargo.toml
exectest/src/: main.rs
gobble/: Cargo.toml  README.md
gobble/benches/: garbling.rs
gobble/fuzz/: Cargo.toml
gobble/fuzz/fuzz_targets/: aes.rs
gobble/src/: aarch64.rs  lib.rs  traits.rs
gobble/src/aarch64/: eval.rs  exec.rs  garb.rs  label.rs  mod.rs
gobble/src/x86_64/: eval.rs  exec.rs  garb.rs  mod.rs
lvl/: Cargo.toml
lvl/src/: cli.rs  leveller.rs  lib.rs  main.rs  new.rs  prealloc.rs  slab.rs  state_map.rs  thinvec.rs  types.rs
src/: lib.rs  reader.rs  ringbuf.rs  writer.rs
src/analysis/: builder.rs  circuit.rs  coords.rs  example_circuits.rs  gate.rs  mod.rs
src/hp/: hints.rs  mod.rs  reader.rs
src/v1/: mod.rs  reader.rs  writer.rs
src/v1/hp/: reader.rs
src/v2/: SPEC.md  mod.rs  reader.rs  varints.rs  writer.rs
src/v2/hp/: mod.rs  reader.rs  writer.rs
src/v3/: SPEC.md  mod.rs
src/v3/a/: SPEC.md  mod.rs  reader.rs  writer.rs
src/v3/a/hp/: mod.rs  reader.rs  writer.rs
src/v3/b/: SPEC.md  mod.rs  reader.rs  varints.rs  writer.rs
src/v3/b/hp/: reader.rs  writer.rs
src/v4/: SPEC.md  mod.rs
src/v4/a/: SPEC.md  mod.rs  reader.rs  varints.rs  writer.rs
src/v4/a/hp/: mod.rs  reader.rs  writer.rs
src/v4/b/: SPEC.md  mod.rs  reader.rs  varints.rs  writer.rs
src/v4/b/hp/: mod.rs  reader.rs  writer.rs
src/v5/: SPEC.md  avx512.rs  mod.rs  scalar.rs  triple_buffer.rs
src/v5/a/: integration.rs  integration_tests.rs  mod.rs  reader.rs  writer.rs
src/v5/b/: integration.rs  mod.rs  reader.rs  writer.rs
src/v5/c/: integration.rs  mod.rs  reader.rs
tests/: test.rs
util/adder/: Cargo.toml  README.md
util/adder/examples/: roundtrip.rs
util/adder/src/: lib.rs  main.rs
util/bench/: Cargo.toml
util/bench/src/: main.rs
util/cli/: Cargo.toml  README.md
util/cli/src/: main.rs
util/dupecheck/: Cargo.toml
util/dupecheck/src/: main.rs
util/exectest/: Cargo.toml
util/exectest/src/: main.rs
util/garbletest/: Cargo.toml
util/garbletest/src/: common.rs  e2e.rs  eval.rs  garble.rs  main.rs
util/gobbletest/: Cargo.toml  README.md
util/gobbletest/src/: common.rs  e2e.rs  eval.rs  eval_translate.rs  exec.rs  garble.rs  garble_translate.rs  lib.rs  main.rs
