[package]
name = "ckt"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.5"
cynosure = { version = ">=0.3", optional = true, default-features = false, features = ["triplebuffer", "monoio-0_2"] }
kanal = { version = "0.1.1", optional = true }
libc = "0.2"
monoio = { version = "0.2.4", features = ["sync"], optional = true }
tempfile = "3.0"

[dev-dependencies]
monoio = { version = "0.2.4", features = ["sync"] }
tempfile = "3.0"

[features]
default = ["high-performance", "v5"]
high-performance = ["dep:monoio", "dep:cynosure"]
v5 = ["dep:kanal"]

[workspace]
members = [ "util/bench", "lvl", "util/dupecheck", "gobble", "util/exectest", "util/adder"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Azz <azz@alpenlabs.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alpenlabs/ckt"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "warn", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_must_use = "warn"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[profile.release]
opt-level = 3
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
# strip = "symbols" # Strip symbols from binary
debug = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable)'] }
