[workspace]
members = [
  "util/bench",
  "lvl",
  "util/dupecheck",
  "gobble",
  "util/exectest",
  "util/adder",
  "util/gobbletest",
  "crates/fmtv5-types"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Azz <azz@alpenlabs.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alpenlabs/ckt"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "warn", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_must_use = "warn"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[profile.release]
opt-level = 3
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
# strip = "symbols" # Strip symbols from binary
debug = true

[workspace.dependencies]
ckt-fmtv5-types = { path = "crates/fmtv5-types" }

ahash = "0.8.12"
bitvec = "1.0.1"
blake3 = "1.5"
crossbeam-channel = "0.5"
indicatif = "0.18.2"
libc = "0.2"
mimalloc = { version = "0.1.48", features = ["v3"] }
monoio = { version = "0.2.4", features = ["sync"] }
rand_chacha = "0.9.0"
tempfile = "3.0"
