[workspace]
members = [
  "crates/fmtv5-types",
  "crates/gobble",
  "crates/lvl",
  "crates/runner-exec",
  "crates/runner-types",
  "util/bench",
  "util/dupecheck",
  "util/adder",
  "util/gobbletest",
]
# leaving out due to oldness:
#   "util/cli",
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Azz <azz@alpenlabs.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alpenlabs/ckt"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "warn", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_must_use = "warn"
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.missing_docs = "warn"
rustdoc.all = "warn"
clippy.too_long_first_doc_paragraph = "warn"

[profile.release]
opt-level = 3
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
# strip = "symbols" # Strip symbols from binary
debug = true

[workspace.dependencies]
ckt-fmtv5-types = { path = "crates/fmtv5-types" }
ckt-gobble = { path = "crates/gobble" }
ckt-lvl = { path = "crates/lvl" }
ckt-runner-exec = { path = "crates/runner-exec" }
ckt-runner-types = { path = "crates/runner-types" }

aes = "0.8.4"
ahash = "0.8.12"
anyhow = "1.0"
assert_cmd = "2.0"
bitvec = "1.0.1"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
crossbeam-channel = "0.5"
cynosure = "0.2.2"
fixedbitset = "0.5.7"
hex-literal = "1.1.0"
indexmap = "2.11.4"
indicatif = "0.18.2"
kanal = "0.1.1"
libc = "0.2"
mimalloc = { version = "0.1.48", features = ["v3"] }
monoio = { version = "0.2.4", features = ["sync"] }
nohash-hasher = "0.2.0"
predicates = "3.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10"
roaring = "0.11.2"
tempfile = "3.0"
