[package]
name = "checker"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt = { version = "0.1.0", path = ".." }
indicatif = "0.18.0"
monoio = { version = "0.2.4", features = ["sync"] }
# roaring = { version = "0.11.2", features = ["simd"] }

[lints]
workspace = true
