[package]
name = "checker"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = "1.8.2"
ckt = { version = "0.1.0", path = ".." }
ckt-engine = { version = "0.1.0", path = "../ckt-engine" }
cynosure = "0.3.0"
indicatif = "0.18.0"
monoio = { version = "0.2.4", features = ["sync"] }
# roaring = { version = "0.11.2", features = ["simd"] }

[lints]
workspace = true
