[package]
name = "ckt-engine"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt = { version = "0.1.0", path = ".." }
cynosure = "0.3.0"
hex-literal = "1.1.0"
indicatif = "0.18.2"

[dev-dependencies]
aes = "0.8.4"
criterion = "0.5"
rand = "0.9.2"

[[bench]]
name = "garbling"
harness = false

[lints]
workspace = true
