[package]
name = "exectest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
ckt = { version = "0.1.0", path = ".." }
indicatif = "0.18.0"
monoio = { version = "0.2.4", features = ["sync"] }

[lints]
workspace = true
