[package]
name = "gobble"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
hex-literal = "1.1.0"
rand_chacha = "0.9.0"

[dev-dependencies]
aes = "0.8.4"
rand = "0.9.2"
criterion = "0.5"

[[bench]]
name = "garbling"
harness = false

[lints]
workspace = true
