[package]
name = "lvl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
ckt = { path = "..", version = "0.1.0", features = ["v5"] }
monoio = { version = "0.2.4", features = ["sync"] }
indicatif = "0.18"
ahash = "0.8.12"
cynosure = "0.2.2"
mimalloc = { version = "0.1.48", features = ["v3"] }
clap = { version = "4.5", features = ["derive"] }
roaring = "0.11.2"
indexmap = "2.11.4"
fixedbitset = "0.5.7"

[features]
nightly = ["roaring/simd"]

[[bin]]
name = "lvl"
path = "src/main.rs"
