[package]
name = "lvl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
ckt-fmtv5-types = { workspace = true, features = ["v5"] }
monoio = { version = "0.2.4", features = ["sync"] }
indicatif = "0.18"
ahash = "0.8.12"
ckt = { path = "..", version = "0.1.0", features = ["v5"] }
clap = { version = "4.5", features = ["derive"] }
cynosure = "0.2.2"
fixedbitset = "0.5.7"
indexmap = "2.11.4"
mimalloc = { version = "0.1.48", features = ["v3"] }
monoio = { version = "0.2.4", features = ["sync"] }
nohash-hasher = "0.2.0"
roaring = "0.11.2"


[[bin]]
name = "lvl"
path = "src/main.rs"
