[package]
name = "ckt-fmtv5-types"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
cynosure = { version = ">=0.3", optional = true, default-features = false, features = [
  "triplebuffer",
  "monoio-0_2",
] }
kanal = { version = "0.1.1", optional = true }
libc.workspace = true
monoio = { version = "0.2.4", features = ["sync"], optional = true }

[dev-dependencies]
monoio = { version = "0.2.4", features = ["sync"] }
tempfile.workspace = true

[features]
default = ["high-performance", "v5"]
high-performance = ["dep:monoio", "dep:cynosure"]
v5 = ["dep:kanal"]

[lints]
workspace = true

#[lints.rust]
#unexpected_cfgs = { level = "warn", check-cfg = ['cfg(unstable)'] }
