[package]
name = "ckt-gobble"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec.workspace = true
hex-literal.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
aes.workspace = true
rand.workspace = true
criterion.workspace = true

[[bench]]
name = "garbling"
harness = false

[[bench]]
name = "mitccrh"
harness = false

[lints]
workspace = true
