[package]
name = "ckt-lvl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
ckt-fmtv5-types = { workspace = true, features = ["v5"] }
monoio.workspace = true
indicatif.workspace = true
ahash.workspace = true
cynosure.workspace = true
mimalloc.workspace = true
clap.workspace = true
roaring.workspace = true
indexmap.workspace = true
fixedbitset.workspace = true
nohash-hasher.workspace = true

[features]
nightly = ["roaring/simd"]

[[bin]]
name = "lvl"
path = "src/main.rs"
