[package]
name = "ckt-lvl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
ahash.workspace = true
ckt-fmtv5-types = { workspace = true, features = ["v5"] }
clap.workspace = true
cynosure.workspace = true
fixedbitset.workspace = true
indexmap.workspace = true
indicatif.workspace = true
mimalloc.workspace = true
monoio.workspace = true
nohash-hasher.workspace = true
roaring.workspace = true

[features]
nightly = ["roaring/simd"]

[[bin]]
name = "lvl"
path = "src/main.rs"
