[package]
name = "ckt-lvl"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash.workspace = true
ckt-fmtv5-types = { workspace = true, features = ["v5"] }
clap.workspace = true
indicatif.workspace = true
mimalloc.workspace = true
monoio.workspace = true
roaring.workspace = true

[[bin]]
name = "lvl"
path = "src/main.rs"
