[package]
name = "adder"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt = { version = "0.1.0", path = "../.." }
monoio = { version = "0.2.4", features = ["sync"] }

[[bin]]
name = "adder"
path = "src/main.rs"

[lints]
workspace = true
