[package]
name = "bench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ahash.workspace = true
ckt-fmtv5-types.workspace = true
indicatif.workspace = true
lvl = { version = "0.1.0", path = "../../lvl" }
monoio.workspace = true

[lints]
workspace = true
