[package]
name = "bench"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt-fmtv5-types.workspace = true
ckt-lvl.workspace = true

ahash.workspace = true
indicatif.workspace = true
monoio.workspace = true

[lints]
workspace = true
