[package]
name = "ckt-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ckt-fmtv5-types.workspace = true

clap.workspace = true
indicatif.workspace = true
kanal.workspace = true
mimalloc.workspace = true
monoio.workspace = true
rayon.workspace = true

[[bin]]
name = "ckt"
path = "src/main.rs"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
