[package]
name = "dupecheck"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt-fmtv5-types.workspace = true
indicatif.workspace = true
monoio.workspace = true
# roaring = { version = "0.11.2", features = ["simd"] }

[lints]
workspace = true
