[package]
name = "exectest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt-fmtv5-types.workspace = true

crossbeam-channel = "0.5"
indicatif.workspace = true
mimalloc.workspace = true
monoio.workspace = true

[lints]
workspace = true
