[package]
name = "gobbletest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec = "1.0.1"
ckt = { version = "0.1.0", path = "../.." }
gobble = { version = "0.1.0", path = "../../gobble" }
indicatif = "0.18.3"
monoio = "0.2.4"
rand_chacha = "0.9.0"
