[package]
name = "gobbletest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitvec.workspace = true
ckt-fmtv5-types.workspace = true
gobble = { version = "0.1.0", path = "../../gobble" }
indicatif.workspace = true
monoio.workspace = true
rand_chacha.workspace = true
