[package]
name = "gobbletest"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckt-fmtv5-types.workspace = true
ckt-gobble.workspace = true
ckt-runner-types.workspace = true
ckt-runner-exec.workspace = true

bitvec.workspace = true
indicatif.workspace = true
monoio.workspace = true
rand_chacha.workspace = true
