[package]
name = "gobble-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
aes = "0.8.4"
libfuzzer-sys = "0.4"

[dependencies.gobble]
path = ".."

[[bin]]
name = "aes"
path = "fuzz_targets/aes.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
